Fixed popup visibility

--- a/granny-grammar/src/Tracer/ContributorPanel.css
+++ b/granny-grammar/src/Tracer/ContributorPanel.css
@@ -13,6 +13,8 @@ gap: 5px;
 width: 220px;
 font-size: 19px;
 text-align: center;
+top: 8px;
+left: 38px;
 }
 
 .submitHere {
